# inksight

./: .gitignore  README.md  README_EN.md  README_ZH.md
.github/workflows/: ci.yml  esp32-s3-rlcd4.2-release.yml
ESP32-S3-RLCD4.2/: README.md
ESP32-S3-RLCD4.2/main/: app_main.c  backend.c  config_store.c  ui.c  wifi_manager.h
backend/api/: index.py
backend/api/routes/: __init__.py  admin_analytics.py  auth.py  config.py  discover.py  modes.py  pages.py  render.py  user.py
backend/core/: activity_store.py  auth.py  context.py  json_content.py  json_renderer.py  mode_catalog.py  mode_registry.py  vocab_store.py
backend/core/modes/builtin/: almanac.json  artwall.json  moyu.json
backend/core/modes/builtin/en/: artwall.json  moyu.json
backend/migrations/: __init__.py
backend/static/console/: console.css  console.js  index.html
backend/tests/: test_integration.py  test_unit_context.py
docs/: assembly.md  flash.md  hardware.md
docs/en/: assembly.md  flash.md  hardware.md
firmware/esp-idf/ESP32-S3-RLCD4.2/: CMakeLists.txt  README.md  RELEASE_FLASHING.md  sdkconfig.defaults
firmware/esp-idf/ESP32-S3-RLCD4.2/main/: CMakeLists.txt  board_config.h  config_store.c  portal.c  st7305.c  wifi_manager.c
firmware_idf/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware_idf/main/: app_main.c  backend.h  battery.c  battery.h  board_config.h  config_store.h  portal.c  portal.h  st7305.c  st7305.h  ui.h
webapp/app/: layout.tsx
webapp/app/config/: page.tsx
webapp/components/: pageview-tracker.tsx
(+1 files in other folders)
